fixed adv tests